--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: _>>. # the website title (if blank, full name will be used instead)
 first_name: yin 
 middle_name: 
-last_name: liu
+last_name:
 email: an.old.coffee.pot@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
@@ -15,7 +15,7 @@ footer_text: >
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords:
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: me.png
+icon: siteFavcon.jpeg
 
 url: https://yinnie.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
